# simplex-lang-fork

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-CHANGE-NOTICE.md  README.md  RUNTIME-EXCEPTION  TASK-010_FINAL_COMPLETE.md  TASK-010_IMPLEMENTATION_COMPLETE.md  autograd.sx  build.sh  build_sanitized.sh  codegen.sx  combined.sx  compiler.sx  context-schema.json  cursus  cursus.sx  lexer.sx  main.sx  merge.sx  package.sx  parser.sx  registry.sx  simplex.context.json  stage0.py  standalone_runtime.c  stdlib.sx  sxc  sxc-compile  sxc.sx  sxdoc  sxdoc-index  sxdoc-index.sx  sxdoc.sx  sxlint_new  sxlsp  sxlsp.sx  sxpm  (+8 more)
.github/workflows/: build.yml  runtime-safety.yml
LICENSES/: AGPL-3.0.txt  MIT.txt
bugs/: BUG-001-infer-outside-specialist-crashes.md
compiler/bootstrap/: IMPLEMENTATION_GAPS.md  codegen.sx  declarations.txt  defs.sx  error.sx  lexer.sx  main.sx  merge.sx  merge_ll.py  parser.sx  run_all_tests.sh  runtime_declarations.txt  stage0.py  stdlib.sx  sxc_combined.ll  temp_decl.txt  test_actors.sx  test_ai_native.sx  test_all_features.sx  test_all_working  test_all_working.sx  test_anima.sx  test_async.sx  test_basic.sx  test_basic_exe  test_bdi.sx  test_bdi_ext.sx  test_belief_ext.sx  test_belief_guards.sx  test_belief_guards_simple  test_belief_guards_simple.sx  test_belief_minimal.sx  test_belief_minimal_exe  test_belief_runtime  test_belief_runtime.sx  test_bitwise_tuples.sx  test_closures  test_closures.sx  test_closures_loops.sx  test_cognitive.sx  (+42 more)
docs/: README.md  profiling.md
docs/errors/: E0001.md  E0002.md  E0003.md  E0004.md  E0005.md  E0006.md  E0007.md  E0008.md  E0009.md  E0100.md  E0101.md  E0102.md  E0103.md  E0104.md  E0105.md  E0106.md  E0107.md  E0108.md  E0109.md  E0200.md  E0201.md  E0202.md  E0203.md  E0204.md  E0205.md  E0300.md  E0301.md  E0302.md  E0303.md  E0304.md  E0305.md  E0400.md  E0401.md  errors.json
docs/guides/: getting-started.md
docs/spec/: 01-overview.md  02-architecture.md  03-design-decisions.md  04-language-syntax.md  05-virtual-machine.md  06-swarm-computing.md  07-ai-integration.md  08-cost-optimization.md  10-compiler-toolchain.md  11-standard-library.md
docs/tutorial/: 03-control-flow.md  05-custom-types.md  08-messages.md  09-supervision.md
edge-hive/: Modulus.toml  README.md  RELEASE.md
edge-hive/src/: adaptation.sx  beliefs.sx  device.sx  epistemic.sx  federation.sx  hardening.sx  hive.sx  lib.sx  main.sx  model.sx  network.sx  nexus.sx  persistence.sx  runtime.sx  security.sx  specialist.sx  types.sx
edge-hive/tests/: run_tests.sh  test_adaptation.sx  test_beliefs.sx  test_epistemic.sx  test_hardening.sx  test_hive.sx  test_model.sx  test_nexus.sx  test_security.sx  test_types.sx
editors/vscode/: README.md  language-configuration.json  package.json  tsconfig.json
examples/: bench_example.sx
lib/: ast_defs.sx  bench.sx  incremental.sh  llm.sx  platform.sx  safety.sx  version.sx
lib/simplex-training/: Modulus.toml  verify_training.py
models/: README.md
models/qwen3-8b/: Modelfile
nexus/: Modulus.toml  README.md  run_tests.sh
nexus/src/: address.sx  bits.sx  conn.sx  conn_pool.sx  control.sx  coordinator.sx  crdt.sx  dual.sx  federation.sx  flow_control.sx  frame.sx  lib.sx  message.sx  multiplex.sx  neural.sx  prediction.sx  reconnect.sx  request_response.sx  secure_conn.sx  secure_frame.sx  security.sx  session.sx  stf.sx  sync.sx  tcp_transport.sx  trajectory.sx  transport.sx  types.sx  vector_clock.sx
nexus/tests/: test_bits.sx  test_conn.sx  test_control.sx  test_frame.sx  test_message.sx  test_phase10.sx  test_phase11.sx  test_phase5.sx  test_phase6.sx  test_phase7.sx  test_phase8.sx  test_phase9.sx  test_sync.sx
playground/: .gitignore  Dockerfile  app.js  docker-compose.yml  examples.json  index.html  nginx.conf  requirements.txt  server.py  style.css
runtime/: ai.sx  slm.sx  standalone_runtime.c  test_belief_guards  test_belief_guards.c
runtime/native/: CMakeLists.txt  llm_native.c
scripts/: build-docs.sh  coverage-report.sh
simplex-cli/: simplex.toml
simplex-cli/src/: lib.sx
simplex-cli/tests/: test_cli.sx
simplex-crypto/: simplex.toml
simplex-docs/: README.md  RELEASE-0.10.0.md  RELEASE-0.5.0.md  RELEASE-0.6.0.md  RELEASE-0.7.0.md  RELEASE-0.8.0.md  RELEASE-0.9.0.md  RELEASE-0.9.5.md  RELEASE-0.9.7.md  RELEASE-0.9.9.md
simplex-http/: simplex.toml
simplex-inference/: Modulus.toml
simplex-json/: simplex.toml
simplex-learning/: Modulus.toml  verify_fixes.py
simplex-log/: simplex.toml
simplex-regex/: simplex.toml
simplex-s3/: simplex.toml
simplex-ses/: simplex.toml
simplex-sql/: simplex.toml
simplex-std/: Modulus.toml
simplex-test/: simplex.toml
simplex-toml/: simplex.toml
simplex-training/: Modulus.toml
simplex-uuid/: simplex.toml
tasks/: README.md  TASK-001-neural-ir.md  TASK-002-cognitive-models.md  TASK-003-convert-training-code.md  TASK-004-realtime-learning.md  TASK-005-dual-numbers.md  TASK-006-self-learning-annealing.md  TASK-007-rebuild-training-pure-simplex.md  TASK-008-convert-codex-to-0.9.0.md  TASK-009-edge-hive.md  TASK-010-runtime-memory-safety.md  TASK-011-toolchain-audit.md  TASK-012-nexus-protocol-condensed.md  TASK-012-nexus-protocol.md  TASK-013-a-implementation.md  TASK-013-formal-uniqueness.md  TASK-014-belief-epistemics.md  TASK-015-simplex-core-slm.md  TASK-016-end-game.md  TASK-017-api-docs-tooling.md  TASK-018-runtime-void-return-bugs.md  TASK-019-compiler-bugs-0.10.0.md  phase1-complete-core.md  phase1-progress.md  phase2-package-ecosystem.md  phase2-progress.md  phase3-essential-libraries.md  phase3-progress.md  phase4-ai-actor-unique-value.md  phase4-progress.md  phase5-completion.md  toolchain-help-consistency.md
tests/: README.md  run_tests.sh  test_float_neg.sx  test_generic.sx  test_match.sx  test_neural_gate2.sx  test_neural_gate3.sx
tools/: compiler.sx  cursus.sx  platform.sx  sxc.sx  sxdoc.sx  sxfmt.sx  sxlint.sx  sxlsp.sx  sxpm.sx
training/: README.md  requirements.txt
tree-sitter-simplex/: .gitignore  README.md  binding.gyp  grammar.js  package.json
(+726 files in other folders)
